# GGJ25

./: .gitignore  CMakeLists.txt  README.md
assets/characters/tiby/: tiby.glb
assets/level_testing/: 0.blend  0.glb  1.json  cube.blend  cube.blend1  cube.fbx  cube.mtl  cube.usdc  test_0.glb  test_0_no_dup.glb  test_0_no_dup.gltf
assets/test/: cube.blend  cube.glb  myconvex0.blend  myconvex0.blend1  myconvex0.gltf
editor_scripts/: LoopGenerator0.py  LoopGenerator1.py  test_0.blend  test_0.blend1  test_0.gltf
enc_temp_folder/38146a84037bb17556e3b4d2a6a31c/: LevelLoader.hpp
include/Bubbles/: Character.hpp  Common.hpp  GameObject.hpp  LevelLoader.hpp  LoadMarked.hpp  MeshUtilities.hpp  Physics.hpp  VectorUtilities.hpp  World.hpp
include/bubbles/: LevelLoader.hpp  MeshUtilities.hpp  Physics.hpp  VectorUtilities.hpp  common.hpp  game_object.hpp  load_marked.hpp
scratchpad/: character_scratchpad.cpp  level_scratchpad.cpp  main.cpp
scratchpads/: engine_0.cpp  first_load_marked.cpp  physics_game_object_0.cpp
